# system_monitor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  README_ES.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: USER_GUIDE.md  WATCH_MODE.md
src/: cli.rs  main.rs
src/display/: formatter.rs  mod.rs
src/monitor/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs  system.rs
