[package]
name = "system_monitor"
version = "0.1.0"
edition = "2021"
authors = ["SoftDryzz"]
description = "A cross-platform CLI system monitoring tool written in Rust"
repository = "https://github.com/SoftDryzz/system_monitor"
license = "MIT"
keywords = ["system", "monitor", "cli", "performance", "metrics"]
categories = ["command-line-utilities"]

[dependencies]
sysinfo = "0.32"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "sysmon"
path = "src/main.rs"
